tests/parsing/cmc/errors/121.expected
File "tests/parsing/cmc/errors/121.cmc", line 1, character 25-26:
1 | (define-system sys :local)
                             ^
Error while parsing a system local definition, read a closing parenthesis,
      but expected a list of sorted variables.
